fix: getting the right path to css

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <title>Frontend Mentor | NFT preview card component</title>
 
-    <link href="/dist/styles.css" rel="stylesheet" />
+    <link href="../dist/styles.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
